# facetomood

./: README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cat/norna/facetomood/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/cat/norna/facetomood/: MainActivity.java  RefCountedAutoCloseable.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cat/norna/facetomood/: ExampleUnitTest.java
docs/doxygen/: Doxyfile
docs/doxygen/html/: action-unit_8h_source.html  annotated.html  au-detector_8h_source.html  classXStr-members.html  classXStr.html  classds_1_1DomSupport-members.html  classds_1_1DomSupport.html  classes.html  classinsight_1_1AUDetector-members.html  classinsight_1_1AUDetector.html  classinsight_1_1ActionUnit-members.html  classinsight_1_1ActionUnit.html  classinsight_1_1DistanceFaceFeature-members.html  classinsight_1_1DistanceFaceFeature.html  classinsight_1_1FaceFeature-members.html  classinsight_1_1FaceFeature.html  classinsight_1_1Insight-members.html  classinsight_1_1Insight.html  classinsight_1_1InsightImpl-members.html  classinsight_1_1InsightImpl.html  classinsight_1_1Mood-members.html  classinsight_1_1Mood.html  classinsight_1_1MoodGroup-members.html  (+43 more)
facetomood/: build.gradle
facetomood/java/: AndroidManifest.xml  build.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: CMakeLists.txt  build.gradle
(+102 files in other folders)
